--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,18 +1,18 @@
 /*定义特殊样式*/
 .m-back-img1 {
-    background-image: url("/Blog/images/background/bg1.jpg");
+    background-image: url("/images/background/bg1.jpg");
 }
 
 .m-back-img2 {
-    background-image: url("/Blog/images/background/bg2.jpg");
+    background-image: url("/images/background/bg2.jpg");
 }
 
 .m-back-img3 {
-    background-image: url("/Blog/images/background/bg3.jpg");
+    background-image: url("/images/background/bg3.jpg");
 }
 
 .m-back-img4 {
-    background-image: url("/Blog/images/background/bg4.jpg");
+    background-image: url("/images/background/bg4.jpg");
 }
 
 .m-back-img5 {
