--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -13,13 +13,19 @@
     <link rel="stylesheet" href="../static/lib/tocbot/tocbot.css" th:href="@{/lib/tocbot/tocbot.css}"/>
     <link rel="stylesheet" href="../static/css/me.css " th:href="@{/css/me.css}"/>
     <link rel="stylesheet" href="../static/css/style.css " th:href="@{/css/style.css}"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
 </head>
 <body>
 
 <nav th:fragment="menu(n)" class="animated fadeInDown m-back-grass m-fixed-w">
+    <a class="left float m-rotate" th:title="${session.User} ? 'Hi~'+${session.User.nickname}:'请登录'" th:href="@{/admin/}"
+       style="float: left;  margin-left: 3em;  margin-top: 0.5em">
+        <img class="ui Mini circular image" th:src="${session.User} ? @{${session.User.avatar}} : @{'/images/avatar/zry.jpg'}"
+             src="" style="width: 51px;">
+    </a>
     <div class="ui container">
         <div class="ui inverted secondary stackable  menu">  <!--stackable 可堆叠的 应用在移动端-->
-            <h2 class="ui teal header item">筱筱客栈</h2>
+            <h2 class="ui white header item">聼宇✌軒</h2>
             <a href="#" th:href="@{/}" class="nav_item item m-mobile-hide" th:classappend="${n == 1} ? 'active'"><i
                     class="home icon"></i>首页</a>
             <a href="#" th:href="@{/types/-1}" class="nav_item item m-mobile-hide"
@@ -62,28 +68,37 @@
     <span id="menu_toggle" class="ui black button m-mobile-show m-top-right ">
         <i class="sidebar icon"></i>
     </span>
+
+
 </nav>
 <!--底部footer-->
-<footer id="footer" th:fragment="footer" class="ui container ">
-    <div >
-        <div class="ui center aligned container m-font-size">本站😉已运行✌[<span id="span_dt_dt" ></span> ]
-        </div>
-        <!--    居中-->
-        <div class="ui center aligned container m-padded-tb-1em">
-            <p class="m-text-thin m-text-spaced" style="color: whitesmoke">Copyright &copy; 2021.9.10 by <span>猫喵喵</span>
-            </p>
-        </div>
+<footer id="footer" th:fragment="footer">
+    <meting-js
+            server="netease"
+            type="playlist"
+            id="6859965088"
+            mini="true"
+            artist="rainymood"
+            fixed="true">
+    </meting-js>
+    <div class="ui center aligned container m-font-size">本站😉已运行✌[<span id="span_dt_dt"></span> ]
+    </div>
+    <!--    居中-->
+    <div class="ui center aligned container m-padded-tb-small">
+        <p class="m-text-thin m-text-spaced" style="color: whitesmoke">Copyright &copy; 2021.9.10 by <span>猫喵喵</span>
+        </p>
+    </div>
 
-        <div th:if="${blog}==null" id="toolbar" class="m-fixed m-bottom-right m-padded" style="display: none">
-            <a id="comment_toTop" class="m-toTop">
-                <i class="ui angle up icon"></i>
-            </a>
-        </div>
+    <div th:if="${blog}==null" id="toolbar" class="m-fixed m-bottom-right m-padded" style="display: none">
+        <a id="comment_toTop" class="m-toTop">
+            <i class="ui angle up icon"></i>
+        </a>
     </div>
 
 </footer>
 <th:block th:fragment="script">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"
+            th:src="@{/js/jquery-3.6.0.min.js}"></script>
     <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery.scrollto@2.1.3/jquery.scrollTo.min.js"></script>
     <script th:src="@{/lib/prism/prism.js}"></script>
@@ -92,8 +107,12 @@
     <script th:src="@{/lib/waypoint/jquery.waypoints.min.js}"></script>
     <script th:src="@{/js/snowFall.js}"></script>
     <script th:src="@{/js/showTime.js}"></script>
-    <!--    网易云歌单 by : https://wp.gxnas.com/5786.html-->
-    <script src="https://myhkw.cn/player/js/player.js" id="myhk" key="demo" m="1"></script>
+    <!-- require APlayer -->
+    <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
+    <!-- require MetingJS -->
+    <script src="https://cdn.jsdelivr.net/npm/meting@2/dist/Meting.min.js"></script>
+
+
     <script>
         show_date_time();
         $(".funIcon").click(function () {
@@ -103,12 +122,7 @@
             $('#pointTop').toggleClass('no');
             $('#footer').toggleClass('no');
             $('#header').toggleClass('no');
-            $('#myhkplayer').removeClass('show');
         });
-        //
-        // $(function () {
-        //     $('#newBlog-container').load(/*[[@{/footer/newBlog}]]*/"/Blog/footer/newBlog");
-        // });
 
         $("#comment_toTop").click(function () {
             $(window).scrollTo(0, 300);
