--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="ui attached segment">
                     <p class="m-text" th:text="#{index.blogDescription}">猫喵喵，一个在读大学生。时间过得好快呀，已经大三了。自己却还是个菜鸟。。后知后觉，开始干干干！！！</p>
-                    <p class="m-text">（本项目以开源）<a target="_blank" href="https://gitee.com/zhao--ruiyu/spring-boot-blog-master">地址</a></p>
+                    <p class="m-text">（本项目以开源。长期维护，欢迎大佬们指导)<a target="_blank" href="https://gitee.com/zhao--ruiyu/spring-boot-blog-master">gitee地址</a></p>
                 </div>
                 <div class="ui attached segment">
                     <div class="ui orange basic left pointing label">编程</div>
