--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="m-header m-back-img4">
     <nav th:replace="_fragments::menu(1)"
-         class="ui inverted attached segment m-padded-tb-mini m-shadow-small animated fadeInDown">
+         class="ui inverted attached segment m-padded-tb-mini m-s   hadow-small animated fadeInDown">
         <div class="ui container">
             <div class="ui inverted secondary stackable  menu">  <!--stackable 可堆叠的 应用在移动端-->
                 <h2 class="ui teal header item">Blog</h2>
@@ -25,7 +25,6 @@
                         <i class="search link icon"></i>
                     </div>
                 </div>
-
             </div>
         </div>
         <a href="#" id="menu_toggle" class="ui black button m-mobile-show m-top-right ">
@@ -35,7 +34,7 @@
     <header id="header">
         <div class="hero-box d-flex justify-content-center align-items-center flex-column">
             <h1 id="heading" class="mt-5 text-white animated flipInX"style="font-size: 4rem;">
-                碧菁筱筱</h1>
+                筱筱宇声</h1>
             <h3 id="subheading" class="text-white d-flex">我回来<span style="color: rgb(29, 223, 163);">是为了</span><span class="animated rotateIn" style="color: rgb(251, 150, 51);">那些回不来的人</span></h3>
         </div>
     </header>
@@ -175,7 +174,6 @@
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
 <!--/*/</th:block>/*/-->
-
 <script type="text/javascript">
 
     $("#menu_toggle").click(function () {
