--- a/src/main/resources/templates/admin/_fragments.html
+++ b/src/main/resources/templates/admin/_fragments.html
@@ -20,6 +20,7 @@
     <div class="ui container">
         <div class="ui inverted secondary stackable  menu">  <!--stackable 可堆叠的 应用在移动端-->
             <h2 class="ui teal header item">后台管理</h2>
+            <a href="#" th:href="@{/}" class=" nav_item item m-mobile-hide"><i class="coffee icon"></i>博客首页</a>
             <a href="#" th:href="@{/admin/}" class=" nav_item item m-mobile-hide" th:classappend="${n == 0} ? 'active'"><i class="home icon"></i>管理首页</a>
             <a href="#" th:href="@{/admin/blogs}" class=" nav_item item m-mobile-hide" th:classappend="${n == 1} ? 'active'"><i class="book icon"></i>博客</a>
             <a href="#" th:href="@{/admin/types}" class="nav_item item m-mobile-hide" th:classappend="${n == 2} ? 'active'"><i class="idea icon"></i>分类</a>
@@ -33,6 +34,7 @@
 
                     <i class="dropdown icon"></i>
                     <div class="menu element-ui dialog" style="z-index: 999 !important;">
+                        <a href="#" th:href="@{/admin/user}" class="item">个人信息</a>
                         <a href="#" th:href="@{/admin/logout}" class="item">注销</a>
                     </div>
                 </div>
@@ -94,8 +96,11 @@
     <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
     <script src="../../static/lib/editormd/editormd.min.js" th:src="@{/lib/editormd/editormd.min.js}"></script>
     <script>
+        $(".ui.dropdown").dropdown({
+            on: "hover"
+        });
         $(function () {
-            $('#newBlog-container').load(/*[[@{/footer/newBlog}]]*/"/Blog/footer/newBlog");
+            $('#newBlog-container').load(/*[[@{/footer/newBlog}]]*/"/footer/newBlog");
         });
     </script>
 </th:block>
