--- a/src/main/resources/templates/admin/user-input.html
+++ b/src/main/resources/templates/admin/user-input.html
@@ -3,13 +3,14 @@
 <head th:replace="admin/_fragments :: head(~{::title})">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>标签管理</title>
+    <title>个人信息管理</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
     <link rel="stylesheet" href="../../static/css/me.css">
+    <link rel="stylesheet" href="../../static/css/style.css">
 </head>
 <body class="m-back-img1">
 <!--导航-->
-<nav th:replace="admin/_fragments::menu(3)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
+<nav th:replace="admin/_fragments::menu(0)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
     <div class="ui container">
         <div class="ui inverted secondary stackable  menu">  <!--stackable 可堆叠的 应用在移动端-->
             <h2 class="ui teal header item">后台管理</h2>
@@ -38,54 +39,51 @@
 
 <!--top attached 完整拼接成一个相连区域 bottom attached-->
 <!--中间内容-->
-<div class="m-padded-tb-4em m-container-small ">
-    <div class="ui container">
-        <!--        加一个celled 网格-->
-        <table class="ui celled table">
-            <thead>
-            <tr>
-                <th>id</th>
-                <th>名称</th>
-                <th>操作</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="tag : ${pageInfo.list}">
-                <td th:text="${tagStat.count}">1</td>
-                <td th:text="${tag.name}">刻苦练习</td>
-                <td>
-                    <a th:href="@{/admin/tags/{id}/input(id=${tag.id})}" class="ui mini teal button">编辑</a>
-                    <a th:href="@{/admin/tags/{id}/delete(id=${tag.id})}" class="ui mini red button">删除</a>
-                </td>
-            </tr>
-            </tbody>
-            <tfoot>
-            <tr>
-                <th colspan="6" class=" center aligned ">
-                    <div class="ui pagination  mini menu">
-
-                        <a class="icon item" th:if="${pageInfo.pageNum != 1}" th:href="@{/admin/tags/(pageNum=${pageInfo.pageNum-1})}">
-                            <i class="left chevron icon"></i>
-                        </a>
-
-                        <a class="icon item" th:if="${!pageInfo.isLastPage}" th:href="@{/admin/tags/(pageNum=${pageInfo.pageNum+1})}">
-                            <i class="right chevron icon"></i>
-                        </a>
+<div class=" m-padded-tb-4em m-container-small ">
+    <form action="#" method="post"
+          th:action="@{/admin/user}" class="ui form">
+        <div class="ui container">
+            <div class="ui link card m-font-size m-margin-auto" style=" margin: auto;">
+                <div class="ui center aligned content">
+                    <img class="ui  small circular image" src="https://unsplash.it/100/100?image=1005"
+                         th:src="@{${session.User.avatar}}" alt="">
+                </div>
+                <div class="content">
+                    <div class="ui left icon input  m-padded-tb-mini">
+                        <i class="user  icon"></i>
+                        <input type="text" name="username" th:value="${session.User.username}" placeholder="用户名:">
                     </div>
-                    <a href="#" th:href="@{/admin/tags/input}" class="ui mini right floated teal basic button">新增</a>
-                </th>
-            </tr>
-            </tfoot>
-        </table>
-        <div class="ui mini negative message" th:if="${message}" >
-            <i class="close icon"></i>
-            <div class="header">提交结果</div>
-            <p th:text="${message}"></p>
+                    <div class="ui left icon input  m-padded-tb-mini">
+                        <i class="lock  icon"></i>
+                        <input type="password" name="password" th:value="${session.User.password}" placeholder="密码:">
+                    </div>
+                    <div class="ui left icon input  m-padded-tb-mini">
+                        <i class="user icon"></i>
+                        <input type="text" name="nickname" th:value="${session.User.nickname}" placeholder="昵称:">
+                    </div>
+
+                    <div class="ui left icon input  m-padded-tb-mini">
+                        <i class="envelope outline  icon"></i>
+                        <input type="text" name="email" th:value="${session.User.email}" placeholder="邮箱:">
+                    </div>
+                </div>
+
+                <div class="ui error message"></div>
+                <div class="ui mini negative message" th:if="${message}">
+                    <i class="close icon"></i>
+                    <div class="header">提交失败</div>
+                    <p th:text="${message}"></p>
+                </div>
+
+                <div class="ui center aligned extra content">
+                    <button class="ui button" type="button" onclick="window.history.go(-1)">返回</button>
+                    <button class="ui teal button">提交</button>
+                </div>
+            </div>
         </div>
-    </div>
+    </form>
+
 </div>
-<br>
-<br>
 <!--底部footer-->
 <footer th:replace="admin/_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
     <!--    居中-->
@@ -141,12 +139,43 @@
         不过，通过使用 "switch" 参数，您能够规定只删除或只添加类。*/
     });
     //消息可关闭
+    $(".ui.form").form({
+        fields: {
+            username: {
+                identifier: 'username',
+                rules: [{
+                    type: "empty",
+                    prompt: "警告：请输入用户名"
+                }]
+            }, email: {
+                identifier: 'email',
+                rules: [{
+                    type: "email",
+                    prompt: "警告：请输入邮箱"
+                }]
+            }, nickname: {
+                identifier: 'nickname',
+                rules: [{
+                    type: "empty",
+                    prompt: "警告：请输入昵称"
+                }]
+            }, password: {
+                identifier: 'password',
+                rules: [{
+                    type: "empty",
+                    prompt: "警告：请输入密码"
+                }]
+            }
+        }
+    });
     $('.message .close')
-        .on('click',function () {
+        .on('click', function () {
             $(this)
                 .closest('.message')
                 .transition('fade');
         });
+
+
 </script>
 
 </html>
