--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -3,13 +3,14 @@
 <head th:replace="admin/_fragments :: head(~{::title})">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>标签管理</title>
+    <title>个人信息</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
     <link rel="stylesheet" href="../../static/css/me.css">
+    <link rel="stylesheet" href="../../static/css/style.css">
 </head>
 <body class="m-back-img1">
 <!--导航-->
-<nav th:replace="admin/_fragments::menu(3)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
+<nav th:replace="admin/_fragments::menu(0)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
     <div class="ui container">
         <div class="ui inverted secondary stackable  menu">  <!--stackable 可堆叠的 应用在移动端-->
             <h2 class="ui teal header item">后台管理</h2>
@@ -38,54 +39,46 @@
 
 <!--top attached 完整拼接成一个相连区域 bottom attached-->
 <!--中间内容-->
-<div class="m-padded-tb-4em m-container-small ">
+<div class=" m-padded-tb-4em m-container-small ">
     <div class="ui container">
-        <!--        加一个celled 网格-->
-        <table class="ui celled table">
-            <thead>
-            <tr>
-                <th>id</th>
-                <th>名称</th>
-                <th>操作</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="tag : ${pageInfo.list}">
-                <td th:text="${tagStat.count}">1</td>
-                <td th:text="${tag.name}">刻苦练习</td>
-                <td>
-                    <a th:href="@{/admin/tags/{id}/input(id=${tag.id})}" class="ui mini teal button">编辑</a>
-                    <a th:href="@{/admin/tags/{id}/delete(id=${tag.id})}" class="ui mini red button">删除</a>
-                </td>
-            </tr>
-            </tbody>
-            <tfoot>
-            <tr>
-                <th colspan="6" class=" center aligned ">
-                    <div class="ui pagination  mini menu">
-
-                        <a class="icon item" th:if="${pageInfo.pageNum != 1}" th:href="@{/admin/tags/(pageNum=${pageInfo.pageNum-1})}">
-                            <i class="left chevron icon"></i>
-                        </a>
-
-                        <a class="icon item" th:if="${!pageInfo.isLastPage}" th:href="@{/admin/tags/(pageNum=${pageInfo.pageNum+1})}">
-                            <i class="right chevron icon"></i>
-                        </a>
-                    </div>
-                    <a href="#" th:href="@{/admin/tags/input}" class="ui mini right floated teal basic button">新增</a>
-                </th>
-            </tr>
-            </tfoot>
-        </table>
-        <div class="ui mini negative message" th:if="${message}" >
-            <i class="close icon"></i>
-            <div class="header">提交结果</div>
-            <p th:text="${message}"></p>
+        <div class="ui link card m-font-size m-margin-auto" style="margin: auto;">
+            <div class="ui center aligned content">
+                <img class="ui  small circular image" src="https://unsplash.it/100/100?image=1005" th:src="@{${session.User.avatar}}" alt="">
+            </div>
+            <div class="content">
+                <span class="right floated">
+                     <span th:text="${session.User.username}">赵睿宇</span>
+                 </span>
+                <i class="user icon"></i>
+                用户名:
+            </div>
+            <div class="content">
+                <span class="right floated">
+                     <span th:text="${session.User.type} == 1 ? '管理员': '用户'">1</span>
+                 </span>
+                <i class="street view icon"></i>
+                权限等级:
+            </div>
+            <div class="content">
+                <span class="right floated">
+                     <span th:text="${session.User.nickname}">猫喵喵</span>
+                 </span>
+                <i class="red heart icon"></i>
+                昵称:
+            </div>
+            <div class="content">
+                <span class="right floated">
+                     <span th:text="${session.User.email}">1447051936@qq.com</span>
+                 </span>
+                <i class="envelope outline icon"></i>
+                邮箱:
+            </div>
+            <div class="ui center aligned extra content">
+                <a href="#" th:href="@{/admin/user/{id}/input(id=${session.User.id})}" class="ui button" >修改</a>
+            </div>
         </div>
     </div>
 </div>
-<br>
-<br>
 <!--底部footer-->
 <footer th:replace="admin/_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
     <!--    居中-->
